--- a/assignment1/pom.xml
+++ b/assignment1/pom.xml
@@ -49,5 +49,10 @@
       <artifactId>spark-core_2.12</artifactId>
       <version>3.3.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-sql_2.12</artifactId> <!-- matching Scala version -->
+      <version>3.3.0</version>  <!-- matching Spark Core version -->
+  </dependency>
   </dependencies>
 </project>
